# orthanc-gdcm

./: .hgignore  AUTHORS  CMakeLists.txt  NEWS  README  TODO
Plugin/: GdcmDecoderCache.cpp  GdcmDecoderCache.h  GdcmImageDecoder.cpp  GdcmImageDecoder.h  Plugin.cpp
Resources/: BuildInstructions.txt  RunCppCheck.sh  SyncOrthancFolder.py  holy-build-box-internal.sh
Resources/CMake/: GdcmConfiguration.cmake  gdcm-2.8.9-no-networking.patch  gdcm-3.0.24-no-networking.patch
Resources/Orthanc/: DownloadOrthancFramework.cmake  LinuxStandardBaseToolchain.cmake
